[tool.poetry]
name = "inputconditiondata2excel"
version = "0.1.0"
description = ""
authors = ["sato1214syun <sato1214syun@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
openpyxl = "^3.1.2"
fire = "^0.5.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
